# tupleops

./: Cargo.toml  LICENSE  LICENSE-ISC  README.md
.github/workflows/: checks.yml  devskim-analysis.yml
crates/same-types/: Cargo.toml  LICENSE-ISC  README.md
crates/same-types/src/: lib.rs
crates/tupleops/: Cargo.toml
crates/tupleops-generator/: Cargo.toml  README.md
crates/tupleops-generator/src/: common.rs  lib.rs  one_arg.rs
crates/tupleops-macros/: Cargo.toml  README.md
crates/tupleops-macros/src/: common.rs  lib.rs
crates/tupleops/src/: lib.rs  tpl_all_ok.rs  tpl_all_some.rs  tpl_append.rs  tpl_apply.rs  tpl_concat.rs  tpl_concat_many.rs  tpl_length.rs  tpl_map.rs  tpl_option.rs  tpl_prepend.rs  tpl_ref.rs  tpl_ref_mut.rs  tpl_tuple.rs  tpl_unappend.rs  tpl_unprepend.rs  tpl_unprepend_template.rs
