[package]
name = "same-types"
version = "0.1.1"
edition = "2018"
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
license = "ISC OR MIT OR Apache-2.0"
description = "Ensure that two types are the same."
homepage = "https://github.com/Kijewski/tupleops"
repository = "https://github.com/Kijewski/tupleops"
categories = ["rust-patterns"]
keywords = ["no-std", "tuple"]
readme = "README.md"

[lib]
name = "same_types"
